...
        refreshControl.addTarget(self, action: #selector(refreshContactData(_:)), for: .valueChanged)
        
        let add = UIBarButtonItem(barButtonSystemItem: .add, target: self, action: #selector(addContact))
        add.tintColor = UIColor(red: 83.0/255.0, green: 227.0/255.0, blue: 197.0/255.0, alpha: 1.0)
        navigationItem.rightBarButtonItems = [add]
        
        self.title = "Contact"
        
    }
    
    override func viewDidAppear(_ animated: Bool) {
        viewModel.fetchContacts()
    }
...
